# Optimization-Study

./: CMakeLists.txt  README.md
cmake/: find_ceres.cmake  find_eigen.cmake  find_g2o.cmake  find_matplotlib.cmake
curveFitting/: CMakeLists.txt  ceres.cpp  g2o.cpp  gaussNewton.cpp
