cmake_minimum_required(VERSION 3.21)

set(PACKAGE_NAME OPTIMIZATION_STUDY)
set(PACKAGE_VERSION 0.0.1)

project(${PACKAGE_NAME} VERSION ${PACKAGE_VERSION} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(${PACKAGE_NAME}_PATH ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(curveFitting)